Adjusted TUNE While Paused page definition for addition of change filament function
Added Change Filament function to Tune page accessed from a Paused Print.
Added a note on the vars_in code no longer required, for returning from a common Tune page.  Want to hold that as an example in case another case like that comes up.

--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -31,6 +31,10 @@ script:
   {% if data == t5uid1.constants.popup_confirmed %}
     {% if t5uid1.is_printing %}
       {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
+	  # NOTE: Having random issues with internal errors and excessive movement errors if try to cancel an active print
+	  #       No luck starting this macro with M400. Instead got "Internal error in M400"
+	  #       Seem to not have those issues if PAUSE first. Will test this approach.
+	  PAUSE  
         CANCEL_PRINT
       {% else %}
         RESPOND TYPE=command MSG=action:cancel
@@ -705,6 +709,7 @@ run_as_gcode: true
 
 [t5uid1_var __return_tune]
 # Determine whether to return to Print Paused or Printing Status page, when returning from Tune page
+# NOT NEEDED now that have separate Tune pages
 type: input
 address: 0x2031
 data_type: none
