--- a/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
@@ -52,7 +52,7 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, le
 [t5uid1_page paused_print_adjust]
 id: 11
 var_auto:
-  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed, status_percent, status_icons
+  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed, status_percent, status_icons, filament_icons, filament_length
 
 [t5uid1_page leveling_manual]
 id: 12
