General Housekeeping, Nascent documentation + failed attempts to fix filament length problem
This commit snapshots some simple filename changes, the beginning of material that will become installation guidelines, and some code changes I made to try to trace and resolve an ongoing problem with the Change Filament length function.

--- a/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
@@ -51,8 +51,9 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, le
 
 [t5uid1_page paused_print_adjust]
 id: 11
+var: filament_icons, filament_length
 var_auto:
-  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed, status_percent, status_icons, filament_icons, filament_length
+  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed, status_percent, status_icons
 
 [t5uid1_page leveling_manual]
 id: 12
