--- a/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
@@ -193,6 +193,14 @@ script:
   {% do set_variable("filament_extruder", t5uid1.constants.extruder_current) %}
   {% do set_variable("filament_length", 150) %}
 
+[t5uid1_routine __filament_paused]
+trigger: enter_pre
+page: paused_print_adjust
+script:
+  {% set t5uid1 = printer.t5uid1 %}
+  {% do set_variable("filament_extruder", t5uid1.constants.extruder_current) %}
+  {% do set_variable("filament_length", 150) %}
+
 [t5uid1_routine __pid]
 trigger: enter_pre
 page: pid
