--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -34,7 +34,7 @@ script:
 	  # NOTE: Having random issues with internal errors and excessive movement errors if try to cancel an active print
 	  #       No luck starting this macro with M400. Instead got "Internal error in M400"
 	  #       Seem to not have those issues if PAUSE first. Will test this approach.
-	  PAUSE  
+	      PAUSE  
         CANCEL_PRINT
       {% else %}
         RESPOND TYPE=command MSG=action:cancel
@@ -353,17 +353,21 @@ type: input
 address: 0x201d
 data_type: uint16
 script:
+  {% set flen = data %}
+  M300 S255 P255
+  M300 S255 P255
+  M300 S255 P255
   {% set t5uid1 = printer.t5uid1 %}
   {% set extruder = get_variable("filament_extruder",
                                  t5uid1.constants.extruder_current) %}
   {% if extruder == t5uid1.constants.extruder_current %}
-    {% set len = limit_extrude(printer.toolhead.extruder, data) %}
+    {% set flen = limit_extrude(printer.toolhead.extruder, data) %}
   {% elif extruder == t5uid1.constants.extruder_e0 %}
-    {% set len = limit_extrude("extruder", data) %}
+    {% set flen = limit_extrude("extruder", data) %}
   {% elif extruder == t5uid1.constants.extruder_e1 %}
-    {% set len = limit_extrude("extruder1", data) %}
+    {% set flen = limit_extrude("extruder1", data) %}
   {% endif %}
-  {% do set_variable("filament_length", len|round|int) %}
+  {% do set_variable("filament_length", flen|round|int) %}
   {% do start_routine("trigger_full_update") %}
 
 [t5uid1_var __filament_move]
