Modified RunABL code to CLEAR bed mesh before running ABL
Suspect routine might otherwise append new probed value to current mesh, rather than replacing it.  Had one occasion when HEIGHTMAP showed the entire mesh to be -.2 to -.3mm below the grid, but "flat" within 0.150mm.

--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -452,10 +452,10 @@ script:
 [t5uid1_var file_name]
 type: output
 # NB: 1. Per DWIN App Dev Guide - Must write text 3 bytes AFTER actual variable pointer!!
-#     2. Although DWIN_SET field is left-justified, atill don't get first couple of letters unless Right justify in the format instruction??
+#     2. Although DWIN_SET field is left-justified, still don't get first couple of letters unless Right justify in the format instruction??
 #     3. Max # of characters that fit on 272-pixel screen = 26
 #     4. Max specifiable field length = 32 characters, forced by T5UID1 messaging code, somewhere...
-#        Consider how to split longer filenames into chunks & display on a rotating basis??
+#     TODO: Consider how to split longer filenames into chunks & display on a rotating basis??
 address: 0x31c1
 data_type: str
 data_len: 32
