--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -320,8 +320,8 @@ script:
   {% elif is_busy() %}
     {% do set_message("Busy") %}
   {% elif 'bed_mesh' in printer %}
-    BED_MESH_CALIBRATE
-    G28 Z
+    BED_MESH_CLEAR
+    BED_MESH_CALIBRATE PROFILE=default
     {% do start_routine("show_probing_screen") %}
   {% endif %}
 run_as_gcode: true
