Complete upload of v1.2.6. Ready for formal release
See release notes.

--- a/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
@@ -5,7 +5,7 @@ timeout: true
 
 [t5uid1_page home]
 id: 1
-var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
+var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target 
 
 [t5uid1_page print_status]
 id: 2
@@ -25,7 +25,7 @@ var_auto:
 [t5uid1_page temp_menu]
 id: 5
 var: temp_h0_max, temp_bed_max
-var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
+var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, fan_speed
 
 [t5uid1_page prepare_menu]
 id: 6
@@ -73,9 +73,14 @@ id: 15
 var: filament_icons, filament_length, move_step_icons
 var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, move_current_z, move_current_y, move_current_x
 
+[t5uid1_page print_menu]
+id: 16
+var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, last_printed_filename
+
 [t5uid1_page settings_menu2]
 id: 18
-var: brightness, volume, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
+var: volume, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
+var_auto: brightness, LED_State, RunoutSensor_State, 
 
 [t5uid1_page pid]
 id: 19
