--- a/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
@@ -1,6 +1,6 @@
 [t5uid1_routine message_timeout]
 trigger: manual
-delay: 30
+delay: 10
 script: {% do set_message("") %}
 
 [t5uid1_routine print_start]
@@ -75,26 +75,31 @@ script:
 trigger: enter
 page: boot
 delay: 3
-script: {% do switch_page("home") %}
+script: 
+  {% do switch_page("home") %}
+  {% do set_message("Printer Ready") %}
 
-#[t5uid1_routine __print_status_pause]
-# Desuuuu design used icon logic but stayed on print_status page when paused.
-# v0.3 and subs switch to print_resume page when PAUSE is pressed
-# and return to print_status page when RESUME is pressed.
-#trigger: enter
-#page: print_status
-#interval: 5
-#script: {% do check_paused() %}
+[t5uid1_routine __print_status_pause]
+# Use t5uid1.check_paused function to switch the display from print_status to paused_print when print is paused - whether by button press or by macro
+# NOTE: At v1.2.6, removed do switch_page() from here, to avoid a display page toggling conflict with the t5uid1.check_paused function
+# Also shortened the interval from 5 to 2, to speed-up the page change
+trigger: enter
+page: print_status
+interval: 2
+script: {% do check_paused() %}
 
 [t5uid1_routine __paused_print]
-# Do not measure print elapsed time while print is paused
+# Do not increment print elapsed time while print is paused
+# Use t5uid1.check_paused function to switch the display back from paused_print to print_status page, when print is resumed
+# NOTE: At v1.2.6, removed do switch_page() from here, to avoid a display page toggling conflict with the t5uid1.check_paused function
+# Also shortened the interval from 5 to 2, to speed-up the page change
 trigger: enter
 page: print_paused
-interval: 5
+interval: 2
 script: {% do check_paused() %}
 
 [t5uid1_routine __print_adjust_resume]
-# Do not measure print elapsed time while print is paused
+# Do not measure print elapsed time while print is paused AND on Tune menu
 trigger: enter
 page: paused_print_adjust
 interval: 5
@@ -120,8 +125,8 @@ script:
     { abort_page_switch() }
   {% elif printer.toolhead.homed_axes == "xyz" %}
     {% set t5uid1 = printer.t5uid1 %}
-    {% set x = (t5uid1.limits.x_min + t5uid1.limits.x_max) / 2 %}
-    {% set y = (t5uid1.limits.y_min + t5uid1.limits.y_max) / 2 %}
+    {% set x = (t5uid1.limits.x_min + t5uid1.limits.x_max) / 2.0 %}
+    {% set y = (t5uid1.limits.y_min + t5uid1.limits.y_max) / 2.0 %}
     {% if printer.gcode_move.gcode_position.z < 10 %}
       G1 Z10 F600
     {% endif %}
