--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -60,7 +60,6 @@ script:
       {% endif %}
     {% endif %}
     {% do start_routine("trigger_full_update") %}
-    {% do switch_page("print_paused") %}
   {% endif %}
 run_as_gcode: true
 
@@ -80,7 +79,6 @@ script:
       {% endif %}
     {% endif %}
     {% do start_routine("trigger_full_update") %}
-    {% do switch_page("print_status") %}
   {% endif %}
 run_as_gcode: true
 
@@ -110,7 +108,7 @@ script:
   {% if "z" not in printer.toolhead.homed_axes %}
     {% do set_message("Homing required") %}
   {% else %}
-    {% set offset = data|float / 10 ** 2 %}
+    {% set offset = data|float / 100 %}
     SET_GCODE_OFFSET Z={offset} MOVE=1
     {% do start_routine("trigger_full_update") %}
   {% endif %}
@@ -231,7 +229,7 @@ script:
   {% if "z" not in printer.toolhead.homed_axes %}
     {% do set_message("Homing required") %}
   {% else %}
-    {% set offset = data|float / 10 ** 2 %}
+    {% set offset = data|float / 100 %}
     SET_GCODE_OFFSET Z={offset} MOVE=1
     {% do start_routine("trigger_full_update") %}
   {% endif %}
@@ -284,8 +282,8 @@ script:
     {% set hop = 5 %}
     {% set t5uid1 = printer.t5uid1 %}
     {% if data == 1 %}
-      {% set x = (t5uid1.limits.x_max - t5uid1.limits.x_min + t5uid1.limits.x_min_inset - t5uid1.limits.x_max_inset) / 2 %}
-      {% set y = (t5uid1.limits.y_max - t5uid1.limits.y_min + t5uid1.limits.y_min_inset - t5uid1.limits.y_max_inset) / 2 %}
+      {% set x = (t5uid1.limits.x_max - t5uid1.limits.x_min + t5uid1.limits.x_min_inset - t5uid1.limits.x_max_inset) / 2.0 %}
+      {% set y = (t5uid1.limits.y_max - t5uid1.limits.y_min + t5uid1.limits.y_min_inset - t5uid1.limits.y_max_inset) / 2.0 %}
     {% elif data == 2 %}
       {% set x = t5uid1.limits.x_min + t5uid1.limits.x_min_inset %}
       {% set y = t5uid1.limits.y_min + t5uid1.limits.y_min_inset %}
@@ -674,8 +672,8 @@ script:
     { abort_page_switch() }
   {% elif printer.toolhead.homed_axes == "xyz" %}
     {% set t5uid1 = printer.t5uid1 %}
-    {% set x = (t5uid1.limits.x_min + t5uid1.limits.x_max) / 2 %}
-    {% set y = (t5uid1.limits.y_min + t5uid1.limits.y_max) / 2 %}
+    {% set x = (t5uid1.limits.x_min + t5uid1.limits.x_max) / 2.0 %}
+    {% set y = (t5uid1.limits.y_min + t5uid1.limits.y_max) / 2.0 %}
     {% if printer.gcode_move.gcode_position.z < 5 %}
       G1 Z5 F600
     {% endif %}
@@ -795,6 +793,18 @@ script:
   {% endif %}
 run_as_gcode: true
 
+[t5uid1_var __toggle_runout_sensor]
+type: input
+address: 0x4002
+data_type: uint16
+script:
+  {% if data == 0 %}
+    RUNOUT_OFF
+  {% else %}
+    RUNOUT_ON 
+  {% endif %}
+run_as_gcode: true
+
 [t5uid1_var __volume]
 type: input
 address: 0x4022
@@ -823,3 +833,18 @@ script:
   {% if counter >= 10 %}
     {% do switch_page("debug1") %}
   {% endif %}
+
+[t5uid1_var __print_menu]
+type: input
+address: 0x4003
+data_type: none
+script:
+  {% do switch_page("print_menu") %}
+
+[t5uid1_var __repeat_last_print]
+type: input
+address: 0x4004
+data_type: uint16
+script:
+  REPEAT_LAST_PRINT
+run_as_gcode: true
