--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -500,3 +500,34 @@ type: output
 address: 0x4023
 data_type: uint16
 script: { printer.t5uid1.brightness }
+
+[t5uid1_var LED_State]
+type: output
+address: 0x4001
+data_type: uint16
+script:
+  { (printer['output_pin hotend_LED'].value)|int }
+
+[t5uid1_var RunoutSensor_State]
+type: output
+address: 0x4002
+data_type: uint16
+script: 
+  { (printer["filament_switch_sensor RunoutSensor"].enabled)|int }
+
+[t5uid1_var last_printed_filename]
+type: output
+address: 0x4007
+data_type: str
+data_len: 32
+script: 
+    {% if 'save_variables' in printer %}
+        {% set svv = printer.save_variables.variables %}
+        {% if 'last_file' in svv %}
+            { svv.last_file }
+        {% else %}
+            { "No previous print job found" }
+        {% endif %}
+    {% else %}
+       { "Not configured correctly" }
+    {% endif %}
