Uploads content for v1.2.7
Adds support for DWIN_SET version 0.3.9.
Modified Leveling Calibration controls to remove the automatic homing before accessing the menu.
Removed the function backing up the current mesh profile when changing to Manual Leveling.  Failed due to code errors + does not seem worth doing.
Modified the CANCEL and PAUSE routines, to eliminate a couple of bugs. NOTE: Still can not PAUSE or CANCEL before the purge line starts.  Still don't know why.
Changed the Manual Leveling function to lower the head to Z=0.0 instead of to 0.2 mm
 - Disagree with paper method anyway + useful even to those of use who do not have leveling wheels...
Changed the address of a couple of variables, to remove a memory conflict.
Commented the probed_matrix() routine in t5uid1.py.

--- a/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
@@ -10,7 +10,7 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
 [t5uid1_page print_status]
 id: 2
 var_auto:
-  file_name, tot_duration, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, printtime_elapsed, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, level_offset
+  file_name, tot_duration, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, printtime_elapsed, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, RunoutSensor_State
 
 [t5uid1_page print_adjust]
 id: 3
@@ -19,8 +19,9 @@ var_auto:
 
 [t5uid1_page print_finished]
 id: 4
+var: status_percent, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed
 var_auto:
-  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, printtime_elapsed, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, level_offset
+  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, status_icons, fan_speed
 
 [t5uid1_page temp_menu]
 id: 5
@@ -33,7 +34,7 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, st
 
 [t5uid1_page print_paused]
 id: 7
-var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed, status_percent, status_icons
+var_auto: file_name, tot_duration, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, printtime_elapsed, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, RunoutSensor_State
 
 [t5uid1_page move]
 id: 8
@@ -57,12 +58,12 @@ var_auto:
 
 [t5uid1_page leveling_manual]
 id: 12
-var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
+var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, level_offset
+
 
 [t5uid1_page leveling_automatic]
 id: 13
-var: level_auto_grid
-var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
+var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, level_auto_grid, bed_mesh_profile
 
 [t5uid1_page leveling_probing]
 id: 14
@@ -77,10 +78,14 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, mo
 id: 16
 var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, last_printed_filename
 
+[t5uid1_page z_offset_menu]
+id: 17
+var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, level_offset, move_current_z, level_offset_step_icons
+
 [t5uid1_page settings_menu2]
 id: 18
 var: volume, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
-var_auto: brightness, LED_State, RunoutSensor_State, 
+var_auto: brightness, LED_State, RunoutSensor_State 
 
 [t5uid1_page pid]
 id: 19
