--- a/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
@@ -69,6 +69,7 @@ script:
       {% do play_sound(sound) %}
     {% endif %}
     {% do switch_page("leveling_automatic") %}
+    {% do set_message("Use SAVE_CONFIG if is OK") %}
   {% endif %}
 
 [t5uid1_routine __boot]
@@ -131,15 +132,15 @@ script:
       G1 Z10 F600
     {% endif %}
     G1 X{x} Y{y} F4800
-  {% else %}
-    { abort_page_switch() }
-    {% do set_variable("line1", "") %}
-    {% do set_variable("line2", "Homing...") %}
-    {% do set_variable("line3", "") %}
-    {% do set_variable("line4", "") %}
-    {% do set_variable("wait_return", "leveling_menu") %}
-    G28
-    {% do start_routine("show_wait_screen") %}
+  #{% else %}
+   # { abort_page_switch() }
+   # {% do set_variable("line1", "") %}
+   # {% do set_variable("line2", "Homing...") %}
+   # {% do set_variable("line3", "") %}
+   # {% do set_variable("line4", "") %}
+   # {% do set_variable("wait_return", "leveling_menu") %}
+   # G28
+   # {% do start_routine("show_wait_screen") %}
   {% endif %}
 run_as_gcode: true
 
@@ -160,20 +161,20 @@ script:
     G28
     {% do start_routine("show_wait_screen") %}
   {% elif 'bed_mesh' in printer %}
-    BED_MESH_PROFILE SAVE=t5uid1_mesh_backup
+    # BED_MESH_PROFILE SAVE=t5uid1_mesh_backup
     BED_MESH_CLEAR
   {% endif %}
 run_as_gcode: true
 
-[t5uid1_routine __leveling_manual_leave]
-trigger: leave
-page: leveling_manual
-script:
-  {% if 'bed_mesh' in printer %}
-    BED_MESH_PROFILE LOAD=t5uid1_mesh_backup
-    BED_MESH_PROFILE REMOVE=t5uid1_mesh_backup
-  {% endif %}
-run_as_gcode: true
+#[t5uid1_routine __leveling_manual_leave]
+#trigger: leave
+#page: leveling_manual
+#script:
+#  {% if 'bed_mesh' in printer %}
+#    BED_MESH_PROFILE LOAD=t5uid1_mesh_backup
+#    BED_MESH_PROFILE REMOVE=t5uid1_mesh_backup
+#  {% endif %}
+#run_as_gcode: true
 
 [t5uid1_routine __leveling_automatic]
 trigger: enter_pre
@@ -189,6 +190,8 @@ script:
     {% do set_message("Missing config: probe") %}
     { abort_page_switch() }
   {% endif %}
+run_as_gcode: true
+
 
 [t5uid1_routine __filament]
 trigger: enter_pre
