--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -31,10 +31,8 @@ script:
   {% if data == t5uid1.constants.popup_confirmed %}
     {% if t5uid1.is_printing %}
       {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
-	  # NOTE: Having random issues with internal errors and excessive movement errors if try to cancel an active print
-	  #       No luck starting this macro with M400. Instead got "Internal error in M400"
-	  #       Seem to not have those issues if PAUSE first. Will test this approach.
-	      PAUSE  
+	    PAUSE  
+        DGUS_PRINT_END
         CANCEL_PRINT
       {% else %}
         RESPOND TYPE=command MSG=action:cancel
@@ -42,7 +40,8 @@ script:
     {% endif %}
     {% do start_routine("trigger_full_update") %}
   {% endif %}
-  END_PRINT
+run_as_gcode: true
+
 run_as_gcode: true
 
 [t5uid1_var __status_pause]
@@ -54,8 +53,11 @@ script:
   {% if data == t5uid1.constants.popup_confirmed %}
     {% if t5uid1.is_printing and not printer.pause_resume.is_paused %}
       {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
+        # Tell Klipper to Pause, if the [virtual_sd_card] section is enabled in printer.cfg
+        # NOTE: The PAUSE macro is redefined and extended in Mainsail.cfg
         PAUSE
       {% else %}
+        # Send an Octoprint Pause command (assumes host uses an Octoprint API to trigger commands)
         RESPOND TYPE=command MSG=action:pause
       {% endif %}
     {% endif %}
@@ -303,7 +305,7 @@ script:
       G1 Z{hop} F600
     {% endif %}
     G1 X{x} Y{y} F4800
-    G1 Z0.2 F300
+    G1 Z0.0 F300
     RESTORE_GCODE_STATE NAME=state_level_manual_point
   {% endif %}
 run_as_gcode: true
@@ -313,28 +315,36 @@ type: input
 address: 0x201a
 data_type: none
 script:
-  {% if printer.toolhead.homed_axes != "xyz" %}
-    {% do set_message("Homing required") %}
-  {% elif is_busy() %}
+  {% if is_busy() %}
     {% do set_message("Busy") %}
   {% elif 'bed_mesh' in printer %}
+    {% if printer.toolhead.homed_axes != "xyz" %}
+      G28
+    {% endif %}
     BED_MESH_CLEAR
-    BED_MESH_CALIBRATE PROFILE=default
+    BED_MESH_CALIBRATE
+    #  NOTE: CALIBRATE automatically updates the mesh profile called "default"
+    #  Trying to make the profile name a variable, but not yet working...
     {% do start_routine("show_probing_screen") %}
   {% endif %}
 run_as_gcode: true
 
-[t5uid1_var __level_auto_disable]
+[t5uid1_var __mesh_profile_remove]
 type: input
 address: 0x201b
 data_type: none
 script:
   {% if is_busy() %}
     {% do set_message("Busy") %}
-  {% elif 'bed_mesh' in printer %}
+  {% elif get_variable("bed_mesh_profile_value") != "default" %}
+    {% do set_message("Can only REMOVE default") %}
+  {% elif 'bed_mesh' not in printer %}
+    {% do set_message("bed_mesh not found") %}
+  {% else %}
     BED_MESH_CLEAR
     BED_MESH_PROFILE REMOVE=default
     {% do start_routine("trigger_full_update") %}
+    {% do set_message("Use SAVE_CONFIG to commit") %}
   {% endif %}
 run_as_gcode: true
 
@@ -563,6 +573,15 @@ script:
   {% do set_variable("move_steps", data) %}
   {% do start_routine("trigger_full_update") %}
 
+[t5uid1_var __update_z_offset]
+type: input
+address: 0x2025
+data_type: none
+script:
+  Z_OFFSET_APPLY_PROBE
+  SAVE_CONFIG
+run_as_gcode: true
+
 [t5uid1_var __settings2_extra]
 type: input
 address: 0x2028
@@ -691,6 +710,22 @@ script:
   {% endif %}
 run_as_gcode: true
 
+[t5uid1_var __mesh_profile_load]
+type: input
+address: 0x202d
+data_type: none
+script:
+  {% if is_busy() %}
+    {% do set_message("Busy") %}
+  {% elif 'bed_mesh' not in printer %}
+    {% do set_message("Can not find bed_mesh in printer.cfg") %}
+  {% else %}
+    BED_MESH_CLEAR
+    BED_MESH_PROFILE LOAD=default
+    {% do start_routine("trigger_full_update") %}
+  {% endif %}
+run_as_gcode: true
+
 [t5uid1_var __save_config]
 type: input
 address: 0x2030
@@ -737,6 +772,7 @@ script:
     {% if t5uid1.is_printing and printer.pause_resume.is_paused %}
       {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
         CLEAR_PAUSE
+        DGUS_PRINT_END
         CANCEL_PRINT
       {% else %}
         RESPOND TYPE=command MSG=action:cancel
@@ -744,7 +780,6 @@ script:
     {% endif %}
     {% do start_routine("trigger_full_update") %}
   {% endif %}
-  END_PRINT
 run_as_gcode: true
 
 [t5uid1_var __RESTART]
@@ -805,9 +840,16 @@ script:
   {% endif %}
 run_as_gcode: true
 
+[t5uid1_var __print_menu]
+type: input
+address: 0x4003
+data_type: none
+script:
+  {% do switch_page("print_menu") %}
+
 [t5uid1_var __volume]
 type: input
-address: 0x4022
+address: 0x4027
 data_type: uint16
 script:
   {% if data >= 0 and data <= 100 %}
@@ -816,12 +858,20 @@ script:
 
 [t5uid1_var __brightness]
 type: input
-address: 0x4023
+address: 0x4028
 data_type: uint16
 script:
   {% if data >= 0 and data <= 100 %}
     {% do set_brightness(data) %}
   {% endif %}
+
+[t5uid1_var __repeat_last_print]
+type: input
+address: 0x4029
+data_type: uint16
+script:
+  REPEAT_LAST_PRINT
+run_as_gcode: true
 
 [t5uid1_var __debug]
 type: input
@@ -833,18 +883,3 @@ script:
   {% if counter >= 10 %}
     {% do switch_page("debug1") %}
   {% endif %}
-
-[t5uid1_var __print_menu]
-type: input
-address: 0x4003
-data_type: none
-script:
-  {% do switch_page("print_menu") %}
-
-[t5uid1_var __repeat_last_print]
-type: input
-address: 0x4004
-data_type: uint16
-script:
-  REPEAT_LAST_PRINT
-run_as_gcode: true
