--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -184,7 +184,7 @@ script:
 type: output
 address: 0x3106
 data_type: int16
-script: { (printer.gcode_move.homing_origin.z * 10 ** 2)|round|int }
+script: { (printer.gcode_move.homing_origin.z * 100)|round|int }
 
 [t5uid1_var level_offset_step_icons]
 type: output
@@ -237,9 +237,22 @@ script:
   {% endif %}
   {% for line in grid %}
     {% for val in line %}
-      { (val * 10 ** 3)|round|int },
+      { (val * 1000)|round|int },
     {% endfor %}
   {% endfor %}
+
+[t5uid1_var bed_mesh_profile]
+type: output
+address: 0x3175
+data_type: str
+data_len: 26
+script: 
+  {% if printer['bed_mesh'].profile_name != "" %}
+    { printer['bed_mesh'].profile_name }
+    {% do set_variable("bed_mesh_profile_value",printer['bed_mesh'].profile_name) %}
+  {% else %}
+    { "None Loaded" }
+  {% endif %}
 
 [t5uid1_var level_probing_icons]
 type: output
@@ -281,19 +294,19 @@ script: { get_variable("filament_length", 150) }
 type: output
 address: 0x3126
 data_type: int16
-script: { (printer.gcode_move.gcode_position.x * 10 ** 1)|round|int }
+script: { (printer.gcode_move.gcode_position.x * 10)|round|int }
 
 [t5uid1_var move_current_y]
 type: output
 address: 0x3127
 data_type: int16
-script: { (printer.gcode_move.gcode_position.y * 10 ** 1)|round|int }
+script: { (printer.gcode_move.gcode_position.y * 10)|round|int }
 
 [t5uid1_var move_current_z]
 type: output
 address: 0x3128
 data_type: int16
-script: { (printer.gcode_move.gcode_position.z * 10 ** 1)|round|int }
+script: { (printer.gcode_move.gcode_position.z * 10)|round|int }
 
 [t5uid1_var move_step_icons]
 type: output
@@ -489,18 +502,6 @@ script:
     { "0" }
   {% endif %}
 
-[t5uid1_var volume]
-type: output
-address: 0x4022
-data_type: uint16
-script: { printer.t5uid1.volume }
-
-[t5uid1_var brightness]
-type: output
-address: 0x4023
-data_type: uint16
-script: { printer.t5uid1.brightness }
-
 [t5uid1_var LED_State]
 type: output
 address: 0x4001
@@ -531,3 +532,16 @@ script:
     {% else %}
        { "Not configured correctly" }
     {% endif %}
+
+[t5uid1_var volume]
+type: output
+address: 0x4027
+data_type: uint16
+script: { printer.t5uid1.volume }
+
+[t5uid1_var brightness]
+type: output
+address: 0x4028
+data_type: uint16
+script: { printer.t5uid1.brightness }
+
