Upload contents of v1.2.8
Implement support for DWIN_SET v0.4.0.
- Reset RunOut Sensor state to last selected value, at boot
- Add message on Home Screen at boot, reporting the state of the runout sensor, after restoring last selected value.  Replace that message after 2.5 secs with "Printer Ready"
- Disable PAUSE and STOP buttons during print, until purge line is being drawn (Solves issue#31)
- Add messages reminding user that those functions are not yet available, if they press the buttons.

--- a/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
@@ -78,7 +78,17 @@ page: boot
 delay: 3
 script: 
   {% do switch_page("home") %}
-  {% do set_message("Printer Ready") %}
+  # Klipper automatically enables the RunoutSensor, with printer.cfg setup to Pause at Runout = True
+  # Rather than ask the user to edit printer.cfg each time they change their minds, this script 
+  # restores the last selected Runout Sensor state (Enabled=1 or Disabled=0) in variables.cfg
+  {% if not 'save_variables' in printer %}
+    {% do set_message("[save_variables] not found") %}
+  {% else %}
+    SET_FILAMENT_SENSOR
+    G4 P2500
+  {% endif %}
+  M117 Printer Ready 
+run_as_gcode: true
 
 [t5uid1_routine __print_status_pause]
 # Use t5uid1.check_paused function to switch the display from print_status to paused_print when print is paused - whether by button press or by macro
