--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -29,19 +29,24 @@ data_type: uint16
 script:
   {% set t5uid1 = printer.t5uid1 %}
   {% if data == t5uid1.constants.popup_confirmed %}
-    {% if t5uid1.is_printing %}
-      {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
-	    PAUSE  
-        DGUS_PRINT_END
-        CANCEL_PRINT
+    {% if t5uid1.is_printing and not printer.pause_resume.is_paused %}
+      {% if not 'save_variables' in printer %}
+        {% do set_message("[save_variables] not found") %}
       {% else %}
-        RESPOND TYPE=command MSG=action:cancel
+        {% set svv = printer.save_variables.variables %}
+        {% if 'disable_pause_stop' in svv and svv.disable_pause_stop==True %}
+          {% do set_message("PAUSE and STOP n/a, yet") %}
+        {% elif 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
+          PAUSE  
+          DGUS_PRINT_END
+          CANCEL_PRINT
+        {% else %}
+          RESPOND TYPE=command MSG=action:cancel
+        {% endif %}
       {% endif %}
     {% endif %}
     {% do start_routine("trigger_full_update") %}
   {% endif %}
-run_as_gcode: true
-
 run_as_gcode: true
 
 [t5uid1_var __status_pause]
@@ -51,14 +56,22 @@ data_type: uint16
 script:
   {% set t5uid1 = printer.t5uid1 %}
   {% if data == t5uid1.constants.popup_confirmed %}
-    {% if t5uid1.is_printing and not printer.pause_resume.is_paused %}
-      {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
-        # Tell Klipper to Pause, if the [virtual_sd_card] section is enabled in printer.cfg
-        # NOTE: The PAUSE macro is redefined and extended in Mainsail.cfg
-        PAUSE
-      {% else %}
-        # Send an Octoprint Pause command (assumes host uses an Octoprint API to trigger commands)
-        RESPOND TYPE=command MSG=action:pause
+    {% if 'save_variables' not in printer %}
+      {% do set_message("]saved_variables] not found") %}
+    {% else %}
+      {% set svv = printer.save_variables.variables %}
+      {% if 'disable_pause_stop' in svv and svv.disable_pause_stop==True %}
+        {% do set_message("PAUSE and STOP n/a, yet") %}
+      {% elif t5uid1.is_printing and not printer.pause_resume.is_paused %}
+        {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
+          # If the [virtual_sd_card] section is enabled in printer.cfg, tell Klipper to Pause
+          # NOTE: The PAUSE macro is redefined and extended in Mainsail.cfg
+          PAUSE
+        {% else %}
+          # Assume the host uses an Octoprint API to send the pause command, instead of using the virtual sd card
+          # CAUTION: This is legacy code from Desuuu - other DGUS-Reloaded code may REQUIRE the use of the virtual sd card.
+          RESPOND TYPE=command MSG=action:pause
+        {% endif %}
       {% endif %}
     {% endif %}
     {% do start_routine("trigger_full_update") %}
@@ -72,7 +85,9 @@ data_type: uint16
 script:
   {% set t5uid1 = printer.t5uid1 %}
   {% if data == t5uid1.constants.popup_confirmed %}
-    {% if t5uid1.is_printing and printer.pause_resume.is_paused %}
+    {% if is_busy() %}
+      {% do set_message("Busy") %}
+    {% elif t5uid1.is_printing and printer.pause_resume.is_paused %}
       {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
         RESUME
         CLEAR_PAUSE
@@ -770,12 +785,19 @@ script:
   {% set t5uid1 = printer.t5uid1 %}
   {% if data == t5uid1.constants.popup_confirmed %}
     {% if t5uid1.is_printing and printer.pause_resume.is_paused %}
-      {% if 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
-        CLEAR_PAUSE
-        DGUS_PRINT_END
-        CANCEL_PRINT
+      {% if not 'save_variables' in printer %}
+        {% do set_message("[save_variables] not found") %}
       {% else %}
-        RESPOND TYPE=command MSG=action:cancel
+        {% set svv = printer.save_variables.variables %}
+        {% if 'disable_pause_stop' in svv and svv.disable_pause_stop==True %}
+          {% do set_message("PAUSE and STOP n/a, yet") %}
+        {% elif 'virtual_sdcard' in printer and printer.virtual_sdcard.file_position != 0 %}
+          CLEAR_PAUSE
+          DGUS_PRINT_END
+          CANCEL_PRINT
+        {% else %}
+          RESPOND TYPE=command MSG=action:cancel
+        {% endif %}      
       {% endif %}
     {% endif %}
     {% do start_routine("trigger_full_update") %}
